--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header ul {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,7 +33,7 @@ header ul {
     list-style-type: none;
 }
 
-header ul li {
+header nav a {
     display: inline-block;
     margin-left: 25px;
 }
