--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    color: #ffffff;
 }
 
 body {
@@ -12,7 +13,6 @@ header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
 }
 
 header h1 {
@@ -39,7 +39,6 @@ header nav a {
 }
 
 a {
-    color: #ffffff;
     text-decoration: none;
 }
 
@@ -55,6 +54,24 @@ img.hero {
     object-fit: cover;
 }
 
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+main section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+}
+
+main section img {
+    max-height: 200px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -65,10 +82,9 @@ img.hero {
     margin-left: 25px;
 }
 
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+main section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 aside {
@@ -84,7 +100,6 @@ aside {
 
 aside section {
     margin-bottom: 32px;
-    color: #ffffff;
 }
 
 aside h3 {
@@ -98,24 +113,6 @@ aside img {
     max-width: 150px;
 }
 
-main section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-main section img {
-    max-height: 200px;
-}
-
-main section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 footer {
     padding: 30px;
     clear: both;
@@ -125,4 +122,9 @@ footer {
 
 footer h2 {
     font-size: 20px;
+    color: #000000;
+}
+
+footer p {
+    color: #000000;
 }
