--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Default stylings */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,10 +7,12 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* Body stylings */
 body {
     background-color: #d9dcd6;
 }
 
+/* Header stylings */
 header h1, header h1 em, footer * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -20,11 +23,13 @@ header {
 }
 
 header h1 {
+    /* Put the heading inline */
     display: inline-block;
     font-size: 48px;
 }
 
 em.seo {
+    /* Remove italicizaton */
     font-style: normal;
     color: #d9dcd6;
 }
@@ -37,12 +42,12 @@ header nav {
 }
 
 header nav a {
-    display: inline-block;
     margin-left: 25px;
     /* Remove link underlining */
     text-decoration: none;
 }
 
+/* Hero image styling */
 img.hero {
     height: 800px;
     width: 100%;
@@ -51,6 +56,7 @@ img.hero {
     object-fit: cover;
 }
 
+/* Main body stylings */
 main {
     width: 75%;
     display: inline-block;
@@ -87,6 +93,7 @@ p {
     font-size: 16px;
 }
 
+/* Sidebar stylings */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -112,6 +119,7 @@ aside img {
     max-width: 150px;
 }
 
+/* Footer stylings */
 footer {
     padding: 30px;
     clear: both;
