--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,8 +108,10 @@ aside section {
     margin-bottom: 32px;
 }
 
-aside h3 {
+aside h2 {
     margin-bottom: 10px;
+    /* Match font size of the original h3 elements */
+    font-size: 18.72px;
     text-align: center;
 }
 
